Fixed bugs, styling issues and test failure due to misconfiguration of rabbitmq-mock; Added banner.txt file; Removed unnecessary log output when running tests; Project updated to version 1.1.1