@@ -6,7 +6,8 @@
 
     <groupId>dev.markodojkic</groupId>
     <artifactId>softwaredevelopmentsimulation</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <name>Software development simulator™</name>
+    <version>1.1.1</version>
     <url>
         https://github.com/MarkoDojkic/Software-Development-Simulation
     </url>
@@ -31,6 +32,7 @@
         <url>https://github.com/MarkoDojkic/Software-Development-Simulation/issues</url>
     </issueManagement>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-version>3.3.0</spring-version>
         <spring-integration-version>6.3.0</spring-integration-version>
         <jmockit-version>1.49</jmockit-version>
@@ -145,7 +147,7 @@
         <dependency>
             <groupId>com.github.fridujo</groupId>
             <artifactId>rabbitmq-mock</artifactId>
-            <version>1.0.14</version>
+            <version>1.2.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -167,6 +169,8 @@
                 <version>3.2.5</version>
                 <configuration>
                     <argLine>
+                        -Xshare:off
+                        -XX:+EnableDynamicAgentLoading
                         -javaagent:${user.home}/.m2/repository/org/jmockit/jmockit/${jmockit-version}/jmockit-${jmockit-version}.jar
                     </argLine>
                 </configuration>
